# cpp-auto-formatter

./: Cargo.toml  Dockerfile  README.md  action.yml
.github/workflows/: push-image.yml
check/: action.yml
clang-format/: clang-format-5  clang-format-6  clang-format-7
command/: action.yml
src/: github.rs  main.rs
