[package]
name = "cpp-auto-format"
version = "0.1.0"
authors = ["Andrew Gaspar <andrew.gaspar@outlook.com>"]
edition = "2018"

[dependencies]
glob = "0.3.0"
rayon = "1.3.0"
serde_json = "1.0"
shell-words = "0.1"

[dependencies.reqwest]
version = "0.10"
features = ["blocking", "json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.clap]
version = "2.33.0"
default-features = false